@@ -28,3 +28,4 @@ Jonathan Yarden            <jyarden@bluegrass.net>
 Patrick Cole               <z@amused.net>
 Khaled Al Hamwi            <kh.alhamwi@gmail.com>
 Graham Maltby              <gmaltby+l2tpns@iig.com.au>
+Rhys Kidd                  <rhys.kidd@staff.westnet.com.au>
